syntax = "proto3";

package api;

option go_package = "github.com/flavono123/l3l/api/pb;api";

service ClusterInfoService {
  rpc GetClusterInfo (ClusterInfoRequest) returns (ClusterInfoResponse);
}

message ClusterInfoRequest {
}

message ClusterInfoResponse {
  string current_context = 1;
  repeated string namespaces = 2;
  repeated GroupVersionResource gvrs = 3;
}

message GroupVersionResource {
  string group = 1;
  string version = 2;
  string resource = 3;
}

